# slideloader

./: .gitignore  README.md  requirements.txt  setup.cfg
src/slideloader/: __init__.py  slideloader.py
