[metadata]
name = slideloader
version = 0.0.1
author = Ruben Lucassen
author_email = r.t.lucassen@umcutrecht.nl
description = Whole slide image loader and tiler
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
    LICENSE
url = https://github.com/RTLucassen/slideloader
classifiers = 
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
install_requires =
    tqdm == 4.64.0
    numpy == 1.23.1
    matplotlib == 3.5.2
    scipy == 1.8.1
    scikit-image == 0.19.3
    Pillow == 9.3.0
    wsidicom == 0.4.0
    openslide-python == 1.2.0









