[metadata]
name = slideloader
version = 0.0.1
author = Ruben T Lucassen
author_email = r.t.lucassen@umcutrecht.nl
description = Whole slide image loader and tiler
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
    LICENSE
url = https://github.com/RTLucassen/slideloader
classifiers = 
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
install_requires =
    tqdm >= 4.63
    numpy >= 1.22
    matplotlib >= 3.5
    scipy >= 1.10
    scikit-image >= 0.19
    Pillow >= 9.1.1
    pydicom >= 2.3
    wsidicom >= 0.9
    openslide-python >= 1.2
    SimpleITK >= 2.2









